# hs-siphash2448

./: README.md  siphash2448.cabal
benchmarks/: Siphash24.hs  Siphash48.hs  Util.hs  bench1.hs
src/Crypto/MAC/: Siphash24.hs  Siphash48.hs
tests/: properties.hs
